crates/gob-symbols/tests/it/snapshots/it__corpus__markdown_apply.snap
---
source: crates/gob-symbols/tests/corpus.rs
expression: out
---
== term ==
(unit "file" "impl" @markdown (unit "section" "impl" name="calls" (group "sequence" (lit "heading" "Calls")) (markdown.paragraph (lit "inline" "Inline `[not a link](x)` code is skipped, ![image](pic.png) is a link, [a](b.md) too.") (apply "link" (ref "pic.png") (lit "text" "image")) (apply "link" (ref "b.md") (lit "text" "a")))))
== scope graph ==
S0
S1 lexical>S0:Must
S2 lexical>S1:Must
D0 S1 Unit "calls" Must
R0 S2 unknown "pic.png"
R1 S2 unknown "b.md"

== file ==
fidelity F4 status Complete
== symbols ==
tests/corpus/markdown/ops/apply.md#calls Heading Public parent=
== edges ==
Links tests/corpus/markdown/ops/apply.md#calls -> ? Unknown Some(BrokenLink) Some("pic.png")
Links tests/corpus/markdown/ops/apply.md#calls -> tests/corpus/markdown/ops/b.md Must None Some("b.md")
