crates/gob-symbols/tests/it/snapshots/it__corpus__markdown_unit.snap
---
source: crates/gob-symbols/tests/corpus.rs
expression: out
---
== term ==
(unit "file" "impl" @markdown (unit "section" "impl" name="title" (group "sequence" (lit "heading" "Title")) (markdown.paragraph (lit "inline" "Intro text."))) (unit "section" "impl" name="setup" (group "sequence" (lit "heading" "Setup")) (markdown.paragraph (lit "inline" "Install it."))) (unit "section" "impl" name="details" (group "sequence" (lit "heading" "Details")) (markdown.paragraph (lit "inline" "More."))) (unit "section" "impl" name="usage" (group "sequence" (lit "heading" "Usage")) (markdown.paragraph (lit "inline" "Run it."))))
== scope graph ==
S0
S1 lexical>S0:Must
S2 lexical>S1:Must
S3 lexical>S1:Must
S4 lexical>S1:Must
S5 lexical>S1:Must
D0 S1 Unit "title" Must
D1 S1 Unit "setup" Must
D2 S1 Unit "details" Must
D3 S1 Unit "usage" Must

== file ==
fidelity F4 status Complete
== symbols ==
tests/corpus/markdown/ops/unit.md#title Heading Public parent=
tests/corpus/markdown/ops/unit.md#setup Heading Public parent=tests/corpus/markdown/ops/unit.md#title
tests/corpus/markdown/ops/unit.md#details Heading Public parent=tests/corpus/markdown/ops/unit.md#setup
tests/corpus/markdown/ops/unit.md#usage Heading Public parent=tests/corpus/markdown/ops/unit.md#title
== edges ==
