crates/gob-symbols/tests/it/snapshots/it__corpus__python_ref.snap
---
source: crates/gob-symbols/tests/corpus.rs
expression: out
---
== term ==
(unit "file" "impl" @python (unit "function" "impl" name="f" \1 (group "sequence" (lit "name" "f") (lit "(" "(") (lit "identifier" "a") (lit ")" ")")) (group "sequence" (python.return_statement (lit "return" "return") (ref #0)))))
== scope graph ==
S0
S1 lexical>S0:Must
S2 lexical>S1:Must
D0 S1 Unit "f" Must
D1 S2 Binder "_" Must
R0 S2 must D1

== file ==
fidelity F2 status Complete
== symbols ==
tests/corpus/python/ops/ref.py::f Function Public parent=
== edges ==
