crates/gob-symbols/tests/it/snapshots/it__corpus__python_unit.snap
---
source: crates/gob-symbols/tests/corpus.rs
expression: out
---
== term ==
(unit "file" "impl" @python (unit "function" "impl" name="f" (group "sequence" (lit "name" "f") (lit "(" "(") (lit ")" ")")) (group "sequence" (python.pass_statement (lit "pass" "pass")))))
== scope graph ==
S0
S1 lexical>S0:Must
S2 lexical>S1:Must
D0 S1 Unit "f" Must

== file ==
fidelity F2 status Complete
== symbols ==
tests/corpus/python/ops/unit.py::f Function Public parent=
== edges ==
